--- a/package.json
+++ b/package.json
@@ -1,49 +1,36 @@
 {
   "name": "h5p-text-grouping",
-  "version": "0.0.0",
-  "description": "Text Grouping for H5P",
-  "private": true,
+  "version": "0.0.1",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "cross-env NODE_ENV=production ./node_modules/.bin/webpack",
-    "watch": "./node_modules/.bin/webpack --watch"
+    "build": "webpack --mode production",
+    "watch": "webpack --mode development --watch"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/h5p/h5p-text-grouping.git"
-  },
-  "keywords": [
-    "h5p",
-    "library",
-    "text-grouping"
-  ],
   "author": "Joubel AS <contact@joubel.com> (https://joubel.com)",
-  "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/h5p/h5p-text-grouping/issues"
-  },
-  "homepage": "https://github.com/h5p/h5p-text-grouping#readme",
-  "devDependencies": {
-    "@babel/cli": "^7.14.5",
-    "@babel/core": "^7.14.6",
-    "@babel/plugin-transform-destructuring": "^7.14.5",
-    "@babel/preset-env": "^7.14.5",
-    "babel-eslint": "^10.1.0",
-    "babel-loader": "^8.2.2",
-    "cross-env": "^7.0.3",
-    "css-loader": "^5.2.6",
-    "editorconfig": "^0.15.3",
-    "eslint": "^7.28.0",
-    "mini-css-extract-plugin": "^1.6.0",
-    "prettier-eslint-cli": "^5.0.1",
-    "regenerator-runtime": "^0.13.7",
-    "sass": "^1.35.1",
-    "sass-loader": "^12.1.0",
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2"
-  },
+  "contributors": [],
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-inlinesvg": "^1.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.7.2",
+    "@babel/preset-env": "^7.7.1",
+    "@babel/preset-react": "^7.7.0",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.2.0",
+    "node-sass": "^4.14.1",
+    "react-transition-group": "^4.3.0",
+    "resolve-url-loader": "^3.1.2",
+    "sass-loader": "^8.0.0",
+    "style-loader": "^1.0.0",
+    "url-loader": "^2.2.0",
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.10"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-react",
+      "@babel/preset-env"
+    ]
   }
 }
