--- a/package.json
+++ b/package.json
@@ -16,11 +16,17 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
+    "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
+    "editorconfig": "^0.15.3",
+    "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
     "node-sass": "^4.14.1",
+    "prettier-eslint-cli": "^5.0.1",
     "react-transition-group": "^4.3.0",
     "resolve-url-loader": "^3.1.2",
+    "sass": "^1.35.1",
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
