--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
         "es6": true,
         "browser": true
     },
-    "extends": ["eslint:recommended"],
+    "extends": ["eslint:recommended", "plugin:react/recommended"],
     "parser": "babel-eslint",
     "parserOptions": {
         "ecmaVersion": 2021,
