--- a/package.json
+++ b/package.json
@@ -20,20 +20,21 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
     "css-loader": "^3.2.0",
-    "eslint-plugin-react": "^7.24.0",
     "eslint": "^7.30.0",
+    "eslint-plugin-react": "^7.24.0",
     "node-sass": "^4.14.1",
-    "prettier-eslint-cli": "^5.0.1",
-    "prettier-eslint": "^12.0.0",
     "prettier": "^2.3.2",
+    "prettier-eslint": "^12.0.0",
+    "prettier-eslint-cli": "^5.0.1",
+    "prop-types": "^15.7.2",
     "react-transition-group": "^4.3.0",
     "resolve-url-loader": "^3.1.2",
-    "sass-loader": "^8.0.0",
     "sass": "^1.35.1",
+    "sass-loader": "^8.0.0",
     "style-loader": "^1.0.0",
     "url-loader": "^2.2.0",
-    "webpack-cli": "^3.3.10",
-    "webpack": "^4.44.1"
+    "webpack": "^4.44.1",
+    "webpack-cli": "^3.3.10"
   },
   "babel": {
     "presets": [
