--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.1",
     "prop-types": "^15.7.2",
+    "prop-types-exact": "^1.2.0",
     "react-transition-group": "^4.3.0",
     "resolve-url-loader": "^3.1.2",
     "sass": "^1.35.1",
