--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^3.2.0",
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
+    "mini-css-extract-plugin": "^1.6.0",
     "prettier": "^2.3.2",
     "prettier-eslint": "^12.0.0",
     "prettier-eslint-cli": "^5.0.1",
