--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@babel/preset-react": "^7.7.0",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.0.6",
+    "cross-env": "^7.0.3",
     "css-loader": "^3.2.0",
     "eslint": "^7.30.0",
     "eslint-plugin-react": "^7.24.0",
